syntax = "proto3";

import "google/protobuf/wrappers.proto";

package ecommerce.v1;
option go_package = "go_with_grpc/chap_03/proto/ecommerce";

service OrderManagement {
    rpc addOrder (Order) returns (google.protobuf.StringValue);
    rpc getOrder (google.protobuf.StringValue) returns (Order);
    rpc searchOrder (google.protobuf.StringValue) returns (stream Order);
    rpc updateOrder (stream Order) returns (google.protobuf.StringValue);
    rpc processOrder (stream google.protobuf.StringValue) returns (stream CombinedShipment);
}

message Order {
    string  id = 1;
    repeated string items = 2;
    string desciption = 3;
    float price = 4;
    string destination = 5;
}

message CombinedShipment {
    string id = 1;
    string status = 2;
    repeated Order orderList = 3;
}